--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,7 @@
     <h1>Welcome to MY APP</h1>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-        var socket = io();
-
-        socket.on('connect', () => {
-            console.log('Connected to the server');
-        });
-
-        socket.on('disconnect', () => {
-            console.log('disconnected from server');
-        });
-    </script>
+    <script src="/js/myscripts.js"> </script>
     
 </body>
 </html>
