Multiple user with basic msg

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,19 @@
 
     <h1>Welcome to MY APP</h1>
 
+    <hr>
+
+    <ol id="myList"></ol>
+
+    <hr>
+
+    <form id="myForm">
+        <input type="text" name="message" placeholder="Please enter message">
+        <button type="submit">Send</button>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/libs/jquery.min.js"></script>
     <script src="/js/myscripts.js"> </script>
     
 </body>
