--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
         <input type="text" name="message" placeholder="Please enter message">
         <button type="submit">Send</button>
     </form>
+    <br>
+    <button class="btn btn-primary" id="geoLocation">Get Location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/libs/jquery.min.js"></script>
